--- a/src/content/index.html
+++ b/src/content/index.html
@@ -32,18 +32,27 @@
   <body>
     <main class="app">
       <h1 class="app__heading visuallyhidden">hydrApp</h1>
-      <img
-        src="assets/icons/icon-512x512.png"
-        alt="glass containing water"
-        class="app__glass"
-      />
-      <p class="app__counter app__counter--js"></p>
-      <button class="app__button app__button--add app__button--js-add">
-        Add glass
-      </button>
-      <button class="app__button app__button--js-remove">
-        Remove glass
-      </button>
+      <div class="app__container">
+        <section class="glass">
+          <h2 class="glass__heading visuallyhidden">Glass of water</h2>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 252 366" enable-background="new 0 0 252 366" class="glass__svg">
+            <g id="glass">
+              <path class="glass__outline" d="M185.7,355H66.3c-6.2,0-11.5-4.6-12.3-10.8L11.1,25.1c-1-7.5,4.8-14.1,12.3-14.1h205.1
+              c7.5,0,13.3,6.6,12.3,14.1L198,344.2C197.2,350.4,192,355,185.7,355z"/>
+              <path class="glass__fill" d="M68.9,339.6l-26.2-195l1.9-0.8c13.4-5.7,26.8-8.5,39.9-8.5c1.8,0,3.7,0.1,5.5,0.2c15.8,1,26.9,5.8,37.7,10.4
+              c10.6,4.6,20.6,8.9,34.8,9.8c1.7,0.1,3.5,0.2,5.2,0.2c12,0,24.5-2.7,37.1-8.2l4.4-1.9l-0.6,4.8c-0.1,0.6-25.4,189-25.4,189H68.9z"
+                />
+            </g>
+          </svg>
+          <p class="glass__counter glass__counter--js">8</p>
+        </section>
+        <button class="app__button app__button--add app__button--js-add">
+          Add glass
+        </button>
+        <button class="app__button app__button--js-remove">
+          Remove glass
+        </button>
+      </div>
     </main>
 
     <script src="js/main.js"></script>
