style: transition effects added

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -49,7 +49,7 @@
         <button class="app__button app__button--add app__button--js-add">
           Add glass
         </button>
-        <button class="app__button app__button--js-remove">
+        <button class="app__button app__button--remove app__button--js-remove">
           Remove glass
         </button>
       </div>
