feat: JS basic functionality with local storage support

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -44,7 +44,7 @@
                 />
             </g>
           </svg>
-          <p class="glass__counter glass__counter--js">8</p>
+          <p class="glass__counter glass__counter--js"></p>
         </section>
         <button class="app__button app__button--add app__button--js-add">
           Add glass
