--- a/index.html
+++ b/index.html
@@ -5,27 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>hydrApp</title>
-    <meta name="description" content="Description" />
+    <meta name="description" content="Simple app for tracking the amount of glasses of water consumed per day" />
 
     <!-- Open Graph -->
-    <!-- <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="/assets/img/cover.png" /> -->
+    <meta property="og:title" content="hydrApp" />
+    <meta property="og:description" content="With this simple app you can track how many glasses of water you drink per day" />
+    <meta property="og:url" content="https://jchojna.github.io/hydrApp/" />
+    <meta property="og:image" content="https://jchojna.github.io/hydrApp/assets/img/cover.png" />
+    <meta property="og:image:width" content="600" />
+    <meta property="og:image:height" content="600" />
 
-    <!-- <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link
       rel="apple-touch-icon"
       sizes="192x192"
       href="assets/icons/icon-192x192.png"
     />
-
     <link
       rel="icon"
       type="image/png"
       href="assets/icons/icon-192x192.png"
-    /> -->
+    />
 
     <link rel="stylesheet" href="css/main.css" />
   </head>
