feat: autocomplete date keys between first and last key in the history

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -54,6 +54,10 @@
           Remove glass
         </button>
       </div>
+
+      <section class="app__history">
+        
+      </section>
     </main>
 
     <script src="js/main.js"></script>
