feat: history of water consumption

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -55,8 +55,8 @@
         </button>
       </div>
 
-      <section class="app__history">
-        
+      <section class="history">
+        <ul class="history__list history__list--js"></ul>
       </section>
     </main>
 
