--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           Remove glass
         </button>
       </div>
+
+      <section class="history">
+        <ul class="history__list history__list--js"></ul>
+      </section>
     </main>
 
     <script src="js/main.js"></script>
