--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
           Remove glass
         </button>
       </div>
-
-      <section class="history">
-        <ul class="history__list history__list--js"></ul>
+      <section class="archive archive--js">
+        <ul class="archive__list archive__list--js"></ul>
       </section>
+      <button class="app__button app__button--archive app__button--js-archive">
+        Show archive
+      </button>
     </main>
 
     <script src="js/main.js"></script>
