feat: page overlay outside edited archive item

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -31,6 +31,9 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
+    <!-- PAGE OVERLAY -->
+    <div class="page-overlay page-overlay--js"></div>
+    <!-- HYDRAPP -->
     <main class="app">
       <h1 class="app__heading visuallyhidden">hydrApp</h1>
       <div class="app__container">
