feat: add button DRY class and apply for each button on a page

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -40,7 +40,7 @@
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
-              <button class="navigation__button navigation__button--archive navigation__button--js-archive">
+              <button class="button navigation__button navigation__button--archive navigation__button--js-archive">
                 Show archive
               </button>
             </li>
@@ -61,10 +61,10 @@
           </svg>
           <p class="glass__counter glass__counter--js"></p>
         </section>
-        <button class="app__button app__button--add app__button--js-add">
+        <button class="button app__button app__button--add app__button--js-add">
           Add glass
         </button>
-        <button class="app__button app__button--remove app__button--js-remove">
+        <button class="button app__button app__button--remove app__button--js-remove">
           Remove glass
         </button>
       </div>
