feat: add new interface of archive section

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -35,13 +35,18 @@
     <div class="page-overlay page-overlay--js"></div>
     <!-- HYDRAPP -->
     <main class="app">
-      <header>
+      <header class="app__header">
         <h1 class="app__heading visuallyhidden">hydrApp</h1>
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="navigation__item">
+              <button class="button navigation__button navigation__button--stats navigation__button--js-stats">
+                Stats
+              </button>
+            </li>
+            <li class="navigation__item">
               <button class="button navigation__button navigation__button--archive navigation__button--js-archive">
-                Show archive
+                Archive
               </button>
             </li>
           </ul>
