fix: correct z-index to display edit mode for archive items properly

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -31,8 +31,6 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <!-- PAGE OVERLAY -->
-    <div class="page-overlay page-overlay--js"></div>
     <!-- HYDRAPP -->
     <main class="app">
       <header class="app__header">
@@ -75,6 +73,7 @@
       </div>
       <section class="archive archive--js">
         <h2 class="archive__heading visuallyhidden">History</h2>
+        <div class="archive__overlay archive__overlay--js"></div>
         <ul class="archive__list archive__list--js"></ul>
       </section>
     </main>
