feat: add logo and basic styles

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -37,6 +37,16 @@
         <h1 class="app__heading visuallyhidden">hydrApp</h1>
         <nav class="navigation">
           <ul class="navigation__list">
+            <li class="logo">
+              <a class="logo__link" href="index.html">
+                <svg class="logo__svg" viewBox="0 0 512 135">
+                  <use href="assets/svg/icons.svg#logo-white"></use>
+                </svg>
+                <svg class="logo__svg logo__svg--color" viewBox="0 0 512 135">
+                  <use href="assets/svg/icons.svg#logo-color"></use>
+                </svg>
+              </a>
+            </li>
             <li class="navigation__item">
               <button class="button navigation__button navigation__button--stats navigation__button--js-stats">
                 Stats
