chore(html): add load more button for archive list

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -85,6 +85,9 @@
         <h2 class="archive__heading visuallyhidden">History</h2>
         <div class="archive__overlay archive__overlay--js"></div>
         <ul class="archive__list archive__list--js"></ul>
+        <button class="button archive__button archive__button--load-more archive__button--js-load-more">
+          Load more
+        </button>
       </section>
     </main>
 
