--- a/src/content/index.html
+++ b/src/content/index.html
@@ -85,9 +85,14 @@
         <h2 class="archive__heading visuallyhidden">History</h2>
         <div class="archive__overlay archive__overlay--js"></div>
         <ul class="archive__list archive__list--js"></ul>
-        <button class="button archive__button archive__button--load-more archive__button--js-load-more">
-          Load more
-        </button>
+        <div class="archive__buttons">
+          <button class="button archive__button archive__button--add-new archive__button--js-add-new ">
+            Add new
+          </button>
+          <button class="button archive__button archive__button--load-more archive__button--js-load-more">
+            Load more
+          </button>
+        </div>
       </section>
     </main>
 
