feat: merge two event listeners into one (add glass and remove glass)

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -60,7 +60,7 @@
           </ul>
         </nav>
       </header>
-      <div class="app__container">
+      <div class="app__container app__container--js">
         <section class="glass">
           <h2 class="glass__heading visuallyhidden">Glass of water</h2>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 252 366" enable-background="new 0 0 252 366" class="glass__svg">
