--- a/src/content/index.html
+++ b/src/content/index.html
@@ -86,8 +86,11 @@
         <div class="archive__overlay archive__overlay--js"></div>
         <ul class="archive__list archive__list--js"></ul>
         <div class="archive__buttons">
-          <button class="button archive__button archive__button--add-new archive__button--js-add-new ">
+          <button class="button archive__button archive__button--add-new archive__button--js-add-new">
             Add new
+          </button>
+          <button class="button archive__button archive__button--remove archive__button--js-remove">
+            Remove
           </button>
           <button class="button archive__button archive__button--load-more archive__button--js-load-more">
             Load more
