--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </ul>
         </nav>
       </header>
-      <div class="app__container">
+      <div class="app__container app__container--js">
         <section class="glass">
           <h2 class="glass__heading visuallyhidden">Glass of water</h2>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 252 366" enable-background="new 0 0 252 366" class="glass__svg">
@@ -85,9 +85,17 @@
         <h2 class="archive__heading visuallyhidden">History</h2>
         <div class="archive__overlay archive__overlay--js"></div>
         <ul class="archive__list archive__list--js"></ul>
-        <button class="button archive__button archive__button--load-more archive__button--js-load-more">
-          Load more
-        </button>
+        <div class="archive__buttons">
+          <button class="button archive__button archive__button--add-new archive__button--js-add-new">
+            Add new
+          </button>
+          <button class="button archive__button archive__button--remove archive__button--js-remove">
+            Remove
+          </button>
+          <button class="button archive__button archive__button--load-more archive__button--js-load-more">
+            Load more
+          </button>
+        </div>
       </section>
     </main>
 
