feat: hide remove button when no archive items

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -87,7 +87,7 @@
         <ul class="archive__list archive__list--js"></ul>
         <div class="archive__buttons">
           <button class="button archive__button archive__button--add-new archive__button--js-add-new">
-            Add new
+            Add
           </button>
           <button class="button archive__button archive__button--remove archive__button--js-remove">
             Remove
