--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
         <ul class="archive__list archive__list--js"></ul>
         <div class="archive__buttons">
           <button class="button archive__button archive__button--add-new archive__button--js-add-new">
-            Add new
-          </button>
-          <button class="button archive__button archive__button--remove archive__button--js-remove">
-            Remove
+            Add
           </button>
           <button class="button archive__button archive__button--load-more archive__button--js-load-more">
             Load more
