feat(html): add container inside a section for modal box

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -107,11 +107,22 @@
         </div>
         <!------------------------------------------ END OF ARCHIVE BUTTONS -->
         <!--------------------------------------- ARCHIVE ADD NEW MODAL BOX -->
-        <div class="add-new add-new--js">
-          <p class="add-new__value add-new__value--js">7</p>
-          <button class="add-new__button add-new__button--decrease add-new__button--js-decrease">LESS</button>
-          <button class="add-new__button add-new__button--increase add-new__button--js-increase">MORE</button>
-        </div>
+        <section class="add-new add-new--js">
+          <h3 class="add-new__heading visuallyhidden">Add new archive entry</h3>
+          <div class="add-new__container">
+            <p class="add-new__value add-new__value--js">7</p>
+            <button class="button add-new__button add-new__button--decrease add-new__button--js-decrease">
+              <svg class="add-new__svg add-new__svg--decrease">
+                <use href="assets/svg/icons.svg#left-arrow"></use>
+              </svg>
+            </button>
+            <button class="button add-new__button add-new__button--increase add-new__button--js-increase">
+              <svg class="add-new__svg add-new__svg--increase">
+                <use href="assets/svg/icons.svg#right-arrow"></use>
+              </svg>
+            </button>
+          </div>
+        </section>
         <!-------------------------------- END OF ARCHIVE ADD NEW MODAL BOX -->
       </section>
       <!-------------------------------------------- END OF ARCHIVE SECTION -->
