--- a/src/content/index.html
+++ b/src/content/index.html
@@ -112,13 +112,23 @@
           <div class="add-new__container">
             <p class="add-new__value add-new__value--js">7</p>
             <button class="button add-new__button add-new__button--decrease add-new__button--js-decrease">
-              <svg class="add-new__svg add-new__svg--decrease">
+              <svg class="add-new__svg add-new__svg--decrease" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#left-arrow"></use>
               </svg>
             </button>
             <button class="button add-new__button add-new__button--increase add-new__button--js-increase">
-              <svg class="add-new__svg add-new__svg--increase">
+              <svg class="add-new__svg add-new__svg--increase" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#right-arrow"></use>
+              </svg>
+            </button>
+            <button class="button add-new__button add-new__button--indicator add-new__button--js-indicator">
+              <svg class="add-new__svg add-new__svg--indicator" viewBox="0 0 512 512">
+                <use href="assets/svg/icons.svg#back-arrow"></use>
+              </svg>
+            </button>
+            <button class="button add-new__button add-new__button--save add-new__button--js-save">
+              <svg class="add-new__svg add-new__svg--save" viewBox="0 0 512 512">
+                <use href="assets/svg/icons.svg#save-icon"></use>
               </svg>
             </button>
           </div>
