--- a/src/content/index.html
+++ b/src/content/index.html
@@ -107,27 +107,27 @@
         </div>
         <!------------------------------------------ END OF ARCHIVE BUTTONS -->
         <!--------------------------------------- ARCHIVE ADD NEW MODAL BOX -->
-        <section class="add-new add-new--js">
-          <h3 class="add-new__heading visuallyhidden">Add new archive entry</h3>
-          <div class="add-new__container">
-            <p class="add-new__value add-new__value--js">7</p>
-            <button class="button add-new__button add-new__button--decrease add-new__button--js-decrease">
-              <svg class="add-new__svg add-new__svg--decrease" viewBox="0 0 512 512">
+        <section class="new-entry new-entry--js">
+          <h3 class="new-entry__heading visuallyhidden">Add new archive entry</h3>
+          <div class="new-entry__container">
+            <p class="new-entry__value new-entry__value--js">7</p>
+            <button class="button new-entry__button new-entry__button--decrease new-entry__button--js-decrease">
+              <svg class="new-entry__svg new-entry__svg--decrease" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#left-arrow"></use>
               </svg>
             </button>
-            <button class="button add-new__button add-new__button--increase add-new__button--js-increase">
-              <svg class="add-new__svg add-new__svg--increase" viewBox="0 0 512 512">
+            <button class="button new-entry__button new-entry__button--increase new-entry__button--js-increase">
+              <svg class="new-entry__svg new-entry__svg--increase" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#right-arrow"></use>
               </svg>
             </button>
-            <button class="button add-new__button add-new__button--indicator add-new__button--js-indicator">
-              <svg class="add-new__svg add-new__svg--indicator" viewBox="0 0 512 512">
+            <button class="button new-entry__button new-entry__button--cancel new-entry__button--js-cancel">
+              <svg class="new-entry__svg new-entry__svg--cancel" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#back-arrow"></use>
               </svg>
             </button>
-            <button class="button add-new__button add-new__button--save add-new__button--js-save">
-              <svg class="add-new__svg add-new__svg--save" viewBox="0 0 512 512">
+            <button class="button new-entry__button new-entry__button--save new-entry__button--js-save">
+              <svg class="new-entry__svg new-entry__svg--save" viewBox="0 0 512 512">
                 <use href="assets/svg/icons.svg#save-icon"></use>
               </svg>
             </button>
