feat(html): instead of archive list, create section for many tables

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -95,7 +95,9 @@
       <section class="archive archive--js">
         <h2 class="archive__heading visuallyhidden">History</h2>
         <div class="archive__overlay archive__overlay--js"></div>
-        <ul class="archive__list archive__list--js"></ul>
+        <section class="weeks weeks--js">
+          <h3 class="weeks__heading visuallyhidden">Weeks</h3>
+        </section>
         <!------------------------------------------------- ARCHIVE BUTTONS -->
         <div class="archive__buttons">
           <button class="button archive__button archive__button--add-new archive__button--js-add-new">
