--- a/src/content/index.html
+++ b/src/content/index.html
@@ -95,9 +95,11 @@
       <section class="archive archive--js">
         <h2 class="archive__heading visuallyhidden">History</h2>
         <div class="archive__overlay archive__overlay--js"></div>
-        <section class="weeks weeks--js">
-          <h3 class="weeks__heading visuallyhidden">Weeks</h3>
-        </section>
+        <!--------------------------------------------------- ARCHIVE WEEKS -->
+        <div class="weeks weeks--js">
+          
+        </div>
+        <!-------------------------------------------- END OF ARCHIVE WEEKS -->
         <!------------------------------------------------- ARCHIVE BUTTONS -->
         <div class="archive__buttons">
           <button class="button archive__button archive__button--add-new archive__button--js-add-new">
