--- a/src/content/index.html
+++ b/src/content/index.html
@@ -102,11 +102,11 @@
         <!-------------------------------------------- END OF ARCHIVE WEEKS -->
         <!------------------------------------------------- ARCHIVE BUTTONS -->
         <div class="archive__buttons">
-          <button class="button archive__button archive__button--add-new archive__button--js-add-new">
-            Add
+          <button class="button archive__button archive__button--prev archive__button--js-prev">
+            Previous
           </button>
-          <button class="button archive__button archive__button--load-more archive__button--js-load-more">
-            Load more
+          <button class="button archive__button archive__button--next archive__button--js-next">
+            Next
           </button>
         </div>
         <!------------------------------------------ END OF ARCHIVE BUTTONS -->
