feat: update class names in archive for better app maintenance

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -94,9 +94,9 @@
       <!--------------------------------------------------- ARCHIVE SECTION -->
       <section class="archive archive--js">
         <h2 class="archive__heading visuallyhidden">History</h2>
-        <div class="archive__overlay archive__overlay--js"></div>
         <!--------------------------------------------------- ARCHIVE WEEKS -->
-        <div class="weeks weeks--js">
+        <!-- <div class="archive__overlay archive__overlay--js"></div> -->
+        <div class="archive__weeks archive__weeks--js">
           
         </div>
         <!-------------------------------------------- END OF ARCHIVE WEEKS -->
