--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>hydrApp</title>
     <meta name="description" content="Simple app for tracking the amount of glasses of water consumed per day" />
-
-    <!-- Open Graph -->
+    <!---------------------------------------------------------- OPEN GRAPH -->
     <meta property="og:title" content="hydrApp" />
     <meta property="og:description" content="With this simple app you can track how many glasses of water you drink per day" />
     <meta property="og:url" content="https://jchojna.github.io/hydrApp/" />
     <meta property="og:image" content="https://jchojna.github.io/hydrApp/assets/img/cover.png" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="600" />
-
+    <!--------------------------------------------------- END OF OPEN GRAPH -->
     <link rel="manifest" href="manifest.json" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link
@@ -27,14 +26,15 @@
       type="image/png"
       href="assets/icons/icon-192x192.png"
     />
-
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <!-- HYDRAPP -->
+    <!------------------------------------------------------------- HYDRAPP -->
     <main class="app">
+      <!-------------------------------------------------------- APP HEADER -->
       <header class="app__header">
         <h1 class="app__heading visuallyhidden">hydrApp</h1>
+        <!-------------------------------------------------- APP NAVIGATION -->
         <nav class="navigation">
           <ul class="navigation__list">
             <li class="logo">
@@ -59,8 +59,12 @@
             </li>
           </ul>
         </nav>
+        <!------------------------------------------- END OF APP NAVIGATION -->
       </header>
+      <!-------------------------------------------------------- APP HEADER -->
+      <!----------------------------------------------------- APP CONTAINER -->
       <div class="app__container app__container--js">
+        <!--------------------------------------------------- GLASS SECTION -->
         <section class="glass">
           <h2 class="glass__heading visuallyhidden">Glass of water</h2>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 252 366" enable-background="new 0 0 252 366" class="glass__svg">
@@ -74,28 +78,65 @@
           </svg>
           <p class="glass__counter glass__counter--js"></p>
         </section>
+        <!-------------------------------------------- END OF GLASS SECTION -->
+        <!--------------------------------------------------- GLASS BUTTONS -->
         <button class="button app__button app__button--add app__button--js-add">
           Add glass
         </button>
         <button class="button app__button app__button--remove app__button--js-remove">
           Remove glass
         </button>
+        <!-------------------------------------------- END OF GLASS BUTTONS -->
       </div>
+      <!---------------------------------------------- END OF APP CONTAINER -->
+      <!--------------------------------------------------- ARCHIVE SECTION -->
       <section class="archive archive--js">
         <h2 class="archive__heading visuallyhidden">History</h2>
-        <div class="archive__overlay archive__overlay--js"></div>
-        <ul class="archive__list archive__list--js"></ul>
+        <!--------------------------------------------------- ARCHIVE WEEKS -->
+        <div class="archive__weeks archive__weeks--js"></div>
+        <!-------------------------------------------- END OF ARCHIVE WEEKS -->
+        <!------------------------------------------------- ARCHIVE BUTTONS -->
         <div class="archive__buttons">
-          <button class="button archive__button archive__button--add-new archive__button--js-add-new">
-            Add
+          <button class="button archive__button archive__button--prev archive__button--js-prev">
+            Previous
           </button>
-          <button class="button archive__button archive__button--load-more archive__button--js-load-more">
-            Load more
+          <button class="button archive__button archive__button--next archive__button--js-next">
+            Next
+          </button>
+        </div>
+        <!-------------------------------- END OF ARCHIVE ADD NEW MODAL BOX -->
+      </section>
+      <!------------------------------------------ END OF ARCHIVE BUTTONS -->
+      <!--------------------------------------- ARCHIVE ADD NEW MODAL BOX -->
+      <section class="new-entry new-entry--js">
+        <h3 class="new-entry__heading visuallyhidden">Add new archive entry</h3>
+        <div class="new-entry__container">
+          <p class="new-entry__value new-entry__value--js"></p>
+          <button class="button new-entry__button new-entry__button--decrease new-entry__button--js-decrease">
+            <svg class="new-entry__svg new-entry__svg--decrease" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#left-arrow"></use>
+            </svg>
+          </button>
+          <button class="button new-entry__button new-entry__button--increase new-entry__button--js-increase">
+            <svg class="new-entry__svg new-entry__svg--increase" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#right-arrow"></use>
+            </svg>
+          </button>
+          <button class="button new-entry__button new-entry__button--cancel new-entry__button--js-cancel">
+            <svg class="new-entry__svg new-entry__svg--cancel" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#back-arrow"></use>
+            </svg>
+          </button>
+          <button class="button new-entry__button new-entry__button--save new-entry__button--js-save">
+            <svg class="new-entry__svg new-entry__svg--save" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#save-icon"></use>
+            </svg>
           </button>
         </div>
       </section>
+      <!-------------------------------------------- END OF ARCHIVE SECTION -->
     </main>
-
+    <!------------------------------------------------------ END OF HYDRAPP -->
     <script src="js/main.js"></script>
   </body>
 </html>
