--- a/src/content/index.html
+++ b/src/content/index.html
@@ -36,6 +36,7 @@
         <h1 class="app__heading visuallyhidden">hydrApp</h1>
         <!-------------------------------------------------- APP NAVIGATION -->
         <nav class="navigation">
+          <h2 class="navigation__heading visuallyhidden">Navigation</h2>
           <ul class="navigation__list">
             <li class="logo">
               <a class="logo__link" href="index.html">
