chore: make archive heading visible

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -92,7 +92,7 @@
       <!---------------------------------------------- END OF APP CONTAINER -->
       <!--------------------------------------------------- ARCHIVE SECTION -->
       <section class="archive archive--js">
-        <h2 class="archive__heading visuallyhidden">History</h2>
+        <h2 class="archive__heading">Archive</h2>
         <div class="archive__weeks archive__weeks--js"></div>
       </section>
       <!-------------------------------------------- END OF ARCHIVE SECTION -->
