--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <h1 class="app__heading visuallyhidden">hydrApp</h1>
         <!-------------------------------------------------- APP NAVIGATION -->
         <nav class="navigation">
+          <h2 class="navigation__heading visuallyhidden">Navigation</h2>
           <ul class="navigation__list">
             <li class="logo">
               <a class="logo__link" href="index.html">
@@ -91,23 +92,11 @@
       <!---------------------------------------------- END OF APP CONTAINER -->
       <!--------------------------------------------------- ARCHIVE SECTION -->
       <section class="archive archive--js">
-        <h2 class="archive__heading visuallyhidden">History</h2>
-        <!--------------------------------------------------- ARCHIVE WEEKS -->
+        <h2 class="archive__heading">Archive</h2>
         <div class="archive__weeks archive__weeks--js"></div>
-        <!-------------------------------------------- END OF ARCHIVE WEEKS -->
-        <!------------------------------------------------- ARCHIVE BUTTONS -->
-        <div class="archive__buttons">
-          <button class="button archive__button archive__button--prev archive__button--js-prev">
-            Previous
-          </button>
-          <button class="button archive__button archive__button--next archive__button--js-next">
-            Next
-          </button>
-        </div>
-        <!-------------------------------- END OF ARCHIVE ADD NEW MODAL BOX -->
       </section>
-      <!------------------------------------------ END OF ARCHIVE BUTTONS -->
-      <!--------------------------------------- ARCHIVE ADD NEW MODAL BOX -->
+      <!-------------------------------------------- END OF ARCHIVE SECTION -->
+      <!----------------------------------------- ARCHIVE ADD NEW MODAL BOX -->
       <section class="new-entry new-entry--js">
         <h3 class="new-entry__heading visuallyhidden">Add new archive entry</h3>
         <div class="new-entry__container">
@@ -134,7 +123,7 @@
           </button>
         </div>
       </section>
-      <!-------------------------------------------- END OF ARCHIVE SECTION -->
+      <!---------------------------------- END OF ARCHIVE ADD NEW MODAL BOX -->
     </main>
     <!------------------------------------------------------ END OF HYDRAPP -->
     <script src="js/main.js"></script>
