feat(html): add burger button

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -58,6 +58,13 @@
                 Archive
               </button>
             </li>
+            <li class="navigation__item">
+              <button class="button burger-button burger-button--js">
+                <svg class="burger-button__svg" viewBox="0 0 512 512">
+                  <use href="assets/svg/icons.svg#burger-button"></use>
+                </svg>
+              </button>
+            </li>
           </ul>
         </nav>
         <!------------------------------------------- END OF APP NAVIGATION -->
