feat: burger button and mobile menu initial setup

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -69,7 +69,15 @@
         </nav>
         <!------------------------------------------- END OF APP NAVIGATION -->
       </header>
-      <!-------------------------------------------------------- APP HEADER -->
+      <!------------------------------------------------- END OF APP HEADER -->
+      <!------------------------------------------------------- MOBILE MENU -->
+      <nav class="mobile-menu mobile-menu--js">
+        <h2 class="mobile-menu__heading visuallyhidden">Mobile menu</h2>
+        <ul class="mobile-menu__list">
+
+        </ul>
+      </nav>
+      <!------------------------------------------------ END OF MOBILE MENU -->
       <!----------------------------------------------------- APP CONTAINER -->
       <div class="app__container app__container--js">
         <!--------------------------------------------------- GLASS SECTION -->
