chore: reorganise page structure for mobile menu layout

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -70,14 +70,6 @@
         <!------------------------------------------- END OF APP NAVIGATION -->
       </header>
       <!------------------------------------------------- END OF APP HEADER -->
-      <!------------------------------------------------------- MOBILE MENU -->
-      <nav class="mobile-menu mobile-menu--js">
-        <h2 class="mobile-menu__heading visuallyhidden">Mobile menu</h2>
-        <ul class="mobile-menu__list">
-
-        </ul>
-      </nav>
-      <!------------------------------------------------ END OF MOBILE MENU -->
       <!----------------------------------------------------- APP CONTAINER -->
       <div class="app__container app__container--js">
         <!--------------------------------------------------- GLASS SECTION -->
@@ -105,12 +97,17 @@
         <!-------------------------------------------- END OF GLASS BUTTONS -->
       </div>
       <!---------------------------------------------- END OF APP CONTAINER -->
-      <!--------------------------------------------------- ARCHIVE SECTION -->
-      <section class="archive archive--js">
-        <h2 class="archive__heading">Archive</h2>
-        <div class="archive__weeks archive__weeks--js"></div>
+      <!------------------------------------------------------- MOBILE MENU -->
+      <section class="mobile-menu mobile-menu--js">
+        <h2 class="mobile-menu__heading visuallyhidden">Mobile menu</h2>
+        <!------------------------------------------------- ARCHIVE SECTION -->
+        <section class="archive archive--js">
+          <h3 class="archive__heading">Archive</h3>
+          <div class="archive__weeks archive__weeks--js"></div>
+        </section>
+        <!------------------------------------------ END OF ARCHIVE SECTION -->
       </section>
-      <!-------------------------------------------- END OF ARCHIVE SECTION -->
+      <!------------------------------------------------ END OF MOBILE MENU -->
       <!----------------------------------------- ARCHIVE ADD NEW MODAL BOX -->
       <section class="new-entry new-entry--js">
         <h3 class="new-entry__heading visuallyhidden">Add new archive entry</h3>
