feat: create archive header and add expand button to it

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -102,7 +102,14 @@
         <h2 class="mobile-menu__heading visuallyhidden">Mobile menu</h2>
         <!------------------------------------------------- ARCHIVE SECTION -->
         <section class="archive archive--js">
-          <h3 class="archive__heading">Archive</h3>
+          <header class="archive__header archive__header--js">
+            <h3 class="archive__heading">Archive</h3>
+            <button class="button archive__button archive__button--plus archive__button--js-plus">
+              <svg class="archive__svg" viewBox="0 0 512 512">
+                <use href="assets/svg/icons.svg#plus-cross"></use>
+              </svg>
+            </button>
+          </header>
           <div class="archive__weeks archive__weeks--js"></div>
         </section>
         <!------------------------------------------ END OF ARCHIVE SECTION -->
