feat: set mobile menu sections to act like buttons

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -70,6 +70,7 @@
         <!------------------------------------------- END OF APP NAVIGATION -->
       </header>
       <!------------------------------------------------- END OF APP HEADER -->
+      
       <!----------------------------------------------------- APP CONTAINER -->
       <div class="app__container app__container--js">
         <!--------------------------------------------------- GLASS SECTION -->
@@ -97,24 +98,84 @@
         <!-------------------------------------------- END OF GLASS BUTTONS -->
       </div>
       <!---------------------------------------------- END OF APP CONTAINER -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <!------------------------------------------------------- MOBILE MENU -->
       <section class="mobile-menu mobile-menu--js">
         <h2 class="mobile-menu__heading visuallyhidden">Mobile menu</h2>
         <!------------------------------------------------- ARCHIVE SECTION -->
         <section class="archive archive--js">
-          <header class="archive__header archive__header--js">
-            <h3 class="archive__heading">Archive</h3>
-            <button class="button archive__button archive__button--plus archive__button--js-plus">
-              <svg class="archive__svg" viewBox="0 0 512 512">
-                <use href="assets/svg/icons.svg#plus-cross"></use>
-              </svg>
-            </button>
-          </header>
+          <h3 class="archive__heading visuallyhidden">Archive</h3>
+          <button class="button mobile-menu__section mobile-menu__section--js-archive">
+            <p class="mobile-menu__title">Archive</p>
+            <svg class="mobile-menu__svg" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#plus-cross"></use>
+            </svg>
+          </button>
           <div class="archive__weeks archive__weeks--js"></div>
         </section>
         <!------------------------------------------ END OF ARCHIVE SECTION -->
+        <!--------------------------------------------------- STATS SECTION -->
+        <section class="stats stats--js">
+          <h3 class="stats__heading visuallyhidden">Stats</h3>
+          <button class="button mobile-menu__section mobile-menu__section--js-stats">
+            <p class="mobile-menu__title">Stats</p>
+            <svg class="mobile-menu__svg" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#plus-cross"></use>
+            </svg>
+          </button>
+          <div class="stats__container stats__container--js"></div>
+        </section>
+        <!-------------------------------------------- END OF STATS SECTION -->
+        <!------------------------------------------ END OF ARCHIVE SECTION -->
+        <!------------------------------------------------ SETTINGS SECTION -->
+        <section class="settings settings--js">
+          <h3 class="settings__heading visuallyhidden">Settings</h3>
+          <button class="button mobile-menu__section mobile-menu__section--js-settings">
+            <p class="mobile-menu__title">Settings</p>
+            <svg class="mobile-menu__svg" viewBox="0 0 512 512">
+              <use href="assets/svg/icons.svg#plus-cross"></use>
+            </svg>
+          </button>
+          <div class="settings__container settings__container--js"></div>
+        </section>
+        <!----------------------------------------- END OF SETTINGS SECTION -->
       </section>
       <!------------------------------------------------ END OF MOBILE MENU -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <!----------------------------------------- ARCHIVE ADD NEW MODAL BOX -->
       <section class="new-entry new-entry--js">
         <h3 class="new-entry__heading visuallyhidden">Add new archive entry</h3>
